<!-- res/layout/activity_edit_record.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/typeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_type_of_record"
        android:inputType="text" />

    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/dateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:inputType="date" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:onClick="onSaveClick" />
</LinearLayout>
